Various fixes, integrity checks, and preparation to include in URDE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,21 @@
 cmake_minimum_required(VERSION 3.0)
 project(kabufuda)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wno-multichar -fno-exceptions")
+
+if(NOT TARGET urde)
+    if(NOT MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    endif()
+endif()
+
 include_directories(include)
+set(KABUFUDA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "kabufuda include path" FORCE)
 
 add_library(kabufuda STATIC
-    include/Card.hpp src/Card.cpp
-    include/Util.hpp src/Util.cpp
-    include/SRAM.hpp src/SRAM.cpp
-    include/WideStringConvert.hpp src/WideStringConvert.cpp)
+    include/kabufuda/Card.hpp lib/Card.cpp
+    include/kabufuda/Util.hpp lib/Util.cpp
+    include/kabufuda/SRAM.hpp lib/SRAM.cpp
+    include/kabufuda/WideStringConvert.hpp lib/WideStringConvert.cpp)
 
-add_subdirectory(test)
+if (NOT TARGET urde)
+    add_subdirectory(test)
+endif()
