Finalize directory structure Remove unrelated classes from Card.{cpp,hpp}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,15 @@ include_directories(include)
 set(KABUFUDA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "kabufuda include path" FORCE)
 
 add_library(kabufuda STATIC
-    include/kabufuda/Card.hpp lib/Card.cpp
-    include/kabufuda/Util.hpp lib/Util.cpp
-    include/kabufuda/SRAM.hpp lib/SRAM.cpp
-    include/kabufuda/WideStringConvert.hpp lib/WideStringConvert.cpp)
+    include/kabufuda/Constants.hpp
+    include/kabufuda/BlockAllocationTable.hpp lib/kabufuda/BlockAllocationTable.cpp
+    include/kabufuda/Card.hpp lib/kabufuda/Card.cpp
+    include/kabufuda/Directory.hpp lib/kabufuda/Directory.cpp
+    include/kabufuda/File.hpp lib/kabufuda/File.cpp
+    include/kabufuda/Util.hpp lib/kabufuda/Util.cpp
+    include/kabufuda/SRAM.hpp lib/kabufuda/SRAM.cpp
+    include/kabufuda/WideStringConvert.hpp lib/kabufuda/WideStringConvert.cpp)
 
-if (NOT TARGET urde)
+if (NOT TARGET hecl)
     add_subdirectory(test)
 endif()
