Add winsupport from hecl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ endif()
 include_directories(include)
 set(KABUFUDA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "kabufuda include path" FORCE)
 
+unset(PLAT_SRCS)
+if(WIN32)
+list(APPEND PLAT_SRCS lib/kabufuda/winsupport.cpp include/kabufuda/winsupport.hpp)
+endif()
+
 add_library(kabufuda STATIC
     include/kabufuda/Constants.hpp
     include/kabufuda/BlockAllocationTable.hpp lib/kabufuda/BlockAllocationTable.cpp
@@ -18,7 +23,8 @@ add_library(kabufuda STATIC
     include/kabufuda/File.hpp lib/kabufuda/File.cpp
     include/kabufuda/Util.hpp lib/kabufuda/Util.cpp
     include/kabufuda/SRAM.hpp lib/kabufuda/SRAM.cpp
-    include/kabufuda/WideStringConvert.hpp lib/kabufuda/WideStringConvert.cpp)
+    include/kabufuda/WideStringConvert.hpp lib/kabufuda/WideStringConvert.cpp
+    ${PLAT_SRCS})
 
 if (NOT TARGET hecl)
     add_subdirectory(test)
