Fix linux build

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,5 +2,10 @@
 add_executable(cardtest
     main.cpp)
 
+set(PLAT_LIBS)
+if (UNIX AND NOT APPLE)
+    list(APPEND PLAT_LIBS rt)
+endif()
+
 target_link_libraries(cardtest
-    kabufuda)
+    kabufuda ${PLAT_LIBS})
